# particle-simulator

./: .gitignore  readme.md
python/: particles.ipynb
wgpu/: Cargo.toml
wgpu/src/: compute.wgsl  compute_map.wgsl  draw.wgsl  framework.rs  main.rs  render_indicators.wgsl  render_map.wgsl
